Simplify HTML comments and adjust color classes.
Removed redundant and excessive HTML comments to improve readability. Updated color classes for consistency and corrected file references (e.g., 'hero-image.jpeg'). Minor spacing and layout adjustments in headings and sections across multiple files.

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -48,12 +48,12 @@
         }
     </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-white-50 text-white-800">
 
 <!-- Header -->
 <header class="bg-white shadow-sm">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <a href="index.html" class="text-xl md:text-2xl font-bold text-gray-900 tracking-tight">Sybilla Sedlar</a>
+        <a href="index.html" class="text-xl md:text-2xl font-bold text-white-900 tracking-tight">Sybilla Sedlar</a>
         <a href="index.html#contact" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">
             Zurück zur Hauptseite
         </a>
@@ -108,13 +108,13 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-gray-800 text-white">
+<footer class="bg-white-800 text-white">
     <div class="container mx-auto px-6 py-8">
         <div class="text-center">
             <p>&copy; 2024 Sybilla Sedlar | Interim-Finanzmanagement</p>
         </div>
-        <div class="flex justify-center space-x-6 mt-6 border-t border-gray-700 pt-6">
-            <a href="impressum.html" class="text-sm text-gray-400 hover:text-white transition-colors">Impressum</a>
+        <div class="flex justify-center space-x-6 mt-6 border-t border-white-700 pt-6">
+            <a href="impressum.html" class="text-sm text-white-400 hover:text-white transition-colors">Impressum</a>
             <a href="datenschutz.html" class="text-sm text-white font-semibold">Datenschutz</a>
         </div>
     </div>
