--- a/index.html
+++ b/index.html
@@ -4,34 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO: Titel der Seite -->
     <title>Sybilla Sedlar | Interim-Finanzmanagement & Prozessoptimierung</title>
 
-    <!-- SEO: Beschreibung für Suchmaschinen -->
     <meta name="description" content="Professionelles Interim-Management im Finanzbereich von Sybilla Sedlar. Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen. Europaweit flexibel einsetzbar.">
 
-    <!-- SEO: Schlüsselwörter für Suchmaschinen -->
     <meta name="keywords" content="Interim-Management, Finanzmanagement, Finanzen, Sybilla Sedlar, Prozessoptimierung, SAP, SAP Concur, SAP HANA, Vakanzüberbrückung, Controlling, Buchhaltung, Unternehmensführung">
 
-    <!-- SEO: Open Graph Tags für Social Media Sharing -->
     <meta property="og:title" content="Sybilla Sedlar | Interim-Finanzmanagement & Prozessoptimierung">
     <meta property="og:description" content="Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="[Ihre vollständige URL, z.B. https://www.ihre-domain.at]">
     <meta property="og:image" content="https://www.codecademy.com/forum_questions/51e509b0631fe9562e0027eb">
 
-    <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Animate On Scroll (AOS) Library for scroll effects -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- FAVICON: Verwendet die Datei 'logo.png' aus Ihrem Verzeichnis -->
     <link rel="icon" href="./logo.png">
 
     <style>
@@ -40,7 +32,7 @@
             scroll-behavior: smooth;
         }
         .hero-bg {
-            /* HINTERGRUNDBILD: Erstellen Sie eine Datei 'hero-image.jpg' (empfohlene Größe: 1920x1080px) und legen Sie sie in dasselbe Verzeichnis. */
+            /* HINTERGRUNDBILD: Erstellen Sie eine Datei 'hero-image.jpeg' (empfohlene Größe: 1920x1080px) und legen Sie sie in dasselbe Verzeichnis. */
             background-image: url('./hero-image.jpeg');
             background-size: cover;
             background-position: center;
@@ -59,12 +51,10 @@
     </style>
 </head>
 <body class="bg-white text-gray-800">
-<!-- Header & Navigation -->
 <header id="header" class="bg-white sticky top-0 z-50 shadow-md transition-all duration-300">
     <div class="container mx-auto px-6 py-3">
         <div class="flex items-center justify-between">
             <a href="#home" class="flex items-center space-x-3">
-                <!-- LOGO: Erstellen Sie eine Datei 'logo.png' und legen Sie sie in dasselbe Verzeichnis. -->
                 <img src="./logo.png" alt="Logo Sybilla Sedlar" class="h-10 w-auto">
                 <span class="text-xl md:text-2xl font-bold text-gray-900 tracking-tight">Sybilla Sedlar</span>
             </a>
@@ -83,7 +73,6 @@
             </div>
         </div>
     </div>
-    <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
         <a href="#home" class="block py-3 px-6 text-gray-700 hover:bg-gray-100 nav-link-mobile">Startseite</a>
         <a href="#about" class="block py-3 px-6 text-gray-700 hover:bg-gray-100 nav-link-mobile">Über mich</a>
@@ -95,7 +84,6 @@
 </header>
 
 <main>
-    <!-- Section: Home / Hero -->
     <section id="home" class="hero-bg text-white min-h-[60vh] md:min-h-[80vh] flex items-center">
         <div class="bg-black/50 absolute inset-0"></div>
         <div class="container mx-auto px-6 text-center relative" data-aos="fade-in" data-aos-duration="1500">
@@ -107,17 +95,15 @@
         </div>
     </section>
 
-    <!-- Section: About Me -->
-    <section id="about" class="py-20 md:py-32 bg-white overflow-hidden">
+    <section id="about" class="py-20 md:py-36 bg-white overflow-hidden">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16" data-aos="fade-up">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-900"><br/>Über mich</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Über mich</h2>
                 <p class="text-lg text-gray-600 mt-2">Ihre Expertin für Finanzen auf Zeit.</p>
                 <div class="w-24 h-1 bg-blue-500 mx-auto mt-4 rounded"></div>
             </div>
             <div class="grid md:grid-cols-5 gap-12 items-center">
                 <div class="md:col-span-2" data-aos="fade-right" data-aos-duration="1000">
-                    <!-- PORTRAITBILD: Ersetzen Sie die URL durch den Pfad zu Ihrem Foto. -->
                     <img src="./logo.png" alt="Portrait von Sybilla Sedlar" class="rounded-full shadow-xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover">
                 </div>
                 <div class="md:col-span-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
@@ -129,7 +115,6 @@
         </div>
     </section>
 
-    <!-- Section: Services -->
     <section id="services" class="py-20 md:py-32 bg-gray-50 overflow-hidden">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16" data-aos="fade-up">
@@ -157,7 +142,6 @@
         </div>
     </section>
 
-    <!-- Section: Projects -->
     <section id="projects" class="py-20 md:py-32 bg-white overflow-hidden">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16" data-aos="fade-up">
@@ -185,7 +169,6 @@
         </div>
     </section>
 
-    <!-- Section: Testimonials -->
     <section id="testimonials" class="py-20 md:py-32 bg-gray-50 overflow-hidden">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16" data-aos="fade-up">
@@ -206,7 +189,6 @@
         </div>
     </section>
 
-    <!-- Section: Contact -->
     <section id="contact" class="py-20 md:py-32 bg-white overflow-hidden">
         <div class="container mx-auto px-6">
             <div class="text-center mb-12" data-aos="fade-up">
@@ -234,7 +216,6 @@
     </section>
 </main>
 
-<!-- Footer -->
 <footer class="bg-gray-800 text-white">
     <div class="container mx-auto px-6 py-8">
         <div class="text-center">
@@ -248,7 +229,6 @@
     </div>
 </footer>
 
-<!-- Animate On Scroll (AOS) JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <script>
