Update hero section styling and improve responsive layout
Replaced fixed height values with a dynamic approach using CSS variables to enhance responsiveness. Adjusted z-index layering for better visual clarity and ensured proper alignment of elements within the hero section. These changes improve maintainability and user experience across varying screen sizes.

--- a/index.html
+++ b/index.html
@@ -84,11 +84,15 @@
 </header>
 
 <main>
-    <section id="home" class="hero-bg text-white min-h-[60vh] md:min-h-[80vh] flex items-center">
-        <div class="bg-black/50 absolute inset-0"></div>
-        <div class="container mx-auto px-6 text-center relative" data-aos="fade-in" data-aos-duration="1500">
-            <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4 drop-shadow-md">Klarheit und Struktur für Ihre Finanzen</h1>
-            <p class="text-lg md:text-2xl font-light max-w-3xl mx-auto drop-shadow-sm">Als Ihre Interim-Managerin im Finanzbereich sorge ich für Stabilität, optimiere Prozesse und überbrücke Vakanzen – professionell, flexibel und lösungsorientiert.</p>
+    <section id="home" class="hero-bg text-white flex items-center relative" style="min-height: calc(var(--vh, 1vh) * 100);">
+        <div class="bg-black/50 absolute inset-0 z-0"></div>
+        <div class="container mx-auto px-6 text-center relative z-10" data-aos="fade-in" data-aos-duration="1500">
+            <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4 drop-shadow-md">
+                Klarheit und Struktur für Ihre Finanzen
+            </h1>
+            <p class="text-lg md:text-2xl font-light max-w-3xl mx-auto drop-shadow-sm">
+                Als Ihre Interim-Managerin im Finanzbereich sorge ich für Stabilität, optimiere Prozesse und überbrücke Vakanzen – professionell, flexibel und lösungsorientiert.
+            </p>
             <a href="#services" class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition-transform transform hover:scale-105">
                 Meine Leistungen entdecken
             </a>
