Add robots.txt, sitemap.xml, and meta updates for SEO
Introduce a robots.txt file to guide web crawlers and prevent indexing of private content. Add sitemap.xml for better search engine indexing and enhance local and structured data in index.html for improved SEO performance. Updated meta tags and alt attributes to align with branding and best practices.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 
     <meta name="description" content="Professionelles Interim-Management im Finanzbereich von Sybilla Sedlar. Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen. Europaweit flexibel einsetzbar.">
 
-    <meta name="keywords" content="Interim-Management, Finanzmanagement, Finanzen, Sybilla Sedlar, Prozessoptimierung, SAP, SAP Concur, SAP HANA, Vakanzüberbrückung, Controlling, Buchhaltung, Unternehmensführung">
+    <meta name="keywords" content="Interim-Management, Finanzmanagement, Finanzen, Sybilla Sedlar, Prozessoptimierung, SAP, SAP Concur, SAP HANA, Vakanzüberbrückung, Controlling, Buchhaltung, Unternehmensführung, Österreich, Wien, CFO, Finanzleitung">
+
+    <!-- Lokale SEO Meta-Tags -->
+    <meta name="geo.region" content="AT">
+    <meta name="geo.placename" content="Österreich">
+    <meta name="geo.position" content="48.2082;16.3738">
+    <meta name="ICBM" content="48.2082, 16.3738">
 
     <meta property="og:title" content="Sybilla Sedlar | Interim-Finanzmanagement & Prozessoptimierung">
     <meta property="og:description" content="Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="[Ihre vollständige URL, z.B. https://www.ihre-domain.at]">
-    <meta property="og:image" content="https://www.codecademy.com/forum_questions/51e509b0631fe9562e0027eb">
+    <meta property="og:url" content="https://www.sybilla-sedlar.at">
+    <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -25,6 +31,45 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="icon" href="./logo.png">
+    <link rel="canonical" href="https://www.sybilla-sedlar.at">
+
+    <!-- Strukturierte Daten (JSON-LD Schema) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Sybilla Sedlar",
+        "jobTitle": "Interim-Finanzmanagerin",
+        "description": "Professionelles Interim-Management im Finanzbereich. Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen.",
+        "url": "https://www.sybilla-sedlar.at",
+        "image": "https://www.sybilla-sedlar.at/logo.png",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "AT",
+            "addressRegion": "Wien"
+        },
+        "sameAs": [],
+        "knowsAbout": [
+            "Interim-Management",
+            "Finanzmanagement",
+            "SAP Concur",
+            "SAP HANA",
+            "Prozessoptimierung",
+            "Controlling",
+            "Buchhaltung",
+            "Teamführung"
+        ],
+        "offers": {
+            "@type": "Service",
+            "name": "Interim-Finanzmanagement",
+            "description": "Überbrückung von Vakanzen im Finanzbereich, Prozessoptimierung und SAP-Beratung",
+            "areaServed": {
+                "@type": "Country",
+                "name": "Österreich"
+            }
+        }
+    }
+    </script>
 
     <style>
         body {
@@ -55,7 +100,7 @@
     <div class="container mx-auto px-6 py-3">
         <div class="flex items-center justify-between">
             <a href="#home" class="flex items-center space-x-3">
-                <img src="./logo.png" alt="Logo Sybilla Sedlar" class="h-10 w-auto">
+                <img src="./logo.png" alt="Logo Sybilla Sedlar - Interim-Finanzmanagement" class="h-10 w-auto">
                 <span class="text-xl md:text-2xl font-bold text-gray-900 tracking-tight">Sybilla Sedlar</span>
             </a>
             <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
@@ -108,7 +153,7 @@
             </div>
             <div class="grid md:grid-cols-5 gap-12 items-center">
                 <div class="md:col-span-2" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="./logo.png" alt="Portrait von Sybilla Sedlar" class="rounded-full shadow-xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover">
+                    <img src="./logo.png" alt="Portrait von Sybilla Sedlar - Interim-Finanzmanagerin und SAP-Expertin" class="rounded-full shadow-xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover">
                 </div>
                 <div class="md:col-span-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">Mag. (FH) Sybilla Sedlar</h3>
