Add robots.txt, sitemap.xml, and Vercel config
Introduce robots.txt and sitemap.xml for SEO and content indexing. Update links to reflect the Vercel deployment domain. Include `vercel.json` for routing and add Google site verification in the HTML.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="google-site-verification" content="vjVQPIsRKWwnv02svo9wOr5Q8BHuCI30fN0H5xE-OC0" />
     <title>Sybilla Sedlar | Interim-Finanzmanagement & Prozessoptimierung</title>
 
     <meta name="description" content="Professionelles Interim-Management im Finanzbereich von Sybilla Sedlar. Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen. Europaweit flexibel einsetzbar.">
