--- a/index.html
+++ b/index.html
@@ -22,24 +22,13 @@
     <meta property="og:url" content="https://www.sybilla-sedlar.at">
     <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
 
-    <link rel="stylesheet" href="./tailwind.min.css">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        'inter': ['Inter', 'sans-serif'],
-                    }
-                }
-            }
-        }
-    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link href="./aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="icon" href="./logo.png">
     <link rel="canonical" href="https://www.sybilla-sedlar.at">
@@ -390,7 +379,7 @@
     </div>
 </footer>
 
-<script src="./aos.js" defer></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
