Simplify form data extraction logic.
Removed redundant code for reading form data as the required variables are already declared earlier. This improves code clarity and eliminates unnecessary duplication.

--- a/index.html
+++ b/index.html
@@ -511,12 +511,7 @@
                 // WhatsApp Backup (falls gewünscht)
                 const yourWhatsappNumber = '436641234567'; // Beispiel: Österreichische Nummer
 
-                // Daten aus den Formularfeldern auslesen
-                const name = document.getElementById('name').value;
-                const company = document.getElementById('company').value;
-                const phone = document.getElementById('phone').value;
-                const email = document.getElementById('email').value;
-                const message = document.getElementById('message').value;
+                // Daten sind bereits oben in den Variablen verfügbar
 
                 // Optional: WhatsApp als zusätzliche Kontaktmöglichkeit
                 // const company = document.getElementById('company').value;
