Content update via admin panel

--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="content-loader.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
