Improve SEO metadata and heading

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutz | Sybilla Sedlar</title>
 
+    <meta name="description" content="Datenschutzerklärung von Sybilla Sedlar: Informationen zur Verarbeitung personenbezogener Daten und Kontaktmöglichkeiten.">
+    <meta name="keywords" content="Sybilla Sedlar, Datenschutz, Privacy Policy">
+    <link rel="canonical" href="https://www.sybilla-sedlar.at/datenschutz.html">
+    <meta name="author" content="Sybilla Sedlar">
+    <meta name="robots" content="index, follow, max-image-preview:large">
+    <meta property="og:title" content="Datenschutz | Sybilla Sedlar">
+    <meta property="og:description" content="Informationen zur Verarbeitung personenbezogener Daten durch Sybilla Sedlar.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sybilla-sedlar.at/datenschutz.html">
+    <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta property="og:image:alt" content="Logo von Sybilla Sedlar">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Datenschutz | Sybilla Sedlar">
+    <meta name="twitter:description" content="Informationen zur Verarbeitung personenbezogener Daten durch Sybilla Sedlar.">
+    <meta name="twitter:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta name="twitter:image:alt" content="Logo von Sybilla Sedlar">
+
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
