--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.sybilla-sedlar.at">
     <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta property="og:image:alt" content="Logo von Sybilla Sedlar">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sybilla Sedlar | Interim-Finanzmanagement & Prozessoptimierung">
+    <meta name="twitter:description" content="Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen.">
+    <meta name="twitter:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta name="twitter:image:alt" content="Logo von Sybilla Sedlar">
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -279,7 +286,7 @@
         <div class="bg-black/50 absolute inset-0 z-0"></div>
         <div class="responsive-container text-center relative z-10" data-aos="fade-in" data-aos-duration="1500">
             <h1 id="hero-heading" class="font-bold leading-tight mb-4 drop-shadow-md" style="font-size: clamp(2rem, 6vw, 4rem);">
-                Klarheit und Struktur für Ihre Finanzen
+                Sybilla Sedlar – Klarheit und Struktur für Ihre Finanzen
             </h1>
             <p class="font-light max-w-4xl mx-auto drop-shadow-sm mb-8" style="font-size: clamp(1.125rem, 3vw, 1.5rem); line-height: 1.4;">
                 Als Ihre Interim-Managerin im Finanzbereich sorge ich für Stabilität, optimiere Prozesse und überbrücke Vakanzen – professionell, flexibel und lösungsorientiert.
