--- a/impressum.html
+++ b/impressum.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum | Sybilla Sedlar</title>
 
+    <meta name="description" content="Impressum von Sybilla Sedlar: gesetzliche Anbieterkennzeichnung und Kontaktinformationen.">
+    <meta name="keywords" content="Sybilla Sedlar, Impressum, Kontakt">
+    <link rel="canonical" href="https://www.sybilla-sedlar.at/impressum.html">
+    <meta name="author" content="Sybilla Sedlar">
+    <meta name="robots" content="index, follow, max-image-preview:large">
+    <meta property="og:title" content="Impressum | Sybilla Sedlar">
+    <meta property="og:description" content="Gesetzliche Anbieterkennzeichnung und Kontaktinformationen von Sybilla Sedlar.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sybilla-sedlar.at/impressum.html">
+    <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta property="og:image:alt" content="Logo von Sybilla Sedlar">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Impressum | Sybilla Sedlar">
+    <meta name="twitter:description" content="Gesetzliche Anbieterkennzeichnung und Kontaktinformationen von Sybilla Sedlar.">
+    <meta name="twitter:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta name="twitter:image:alt" content="Logo von Sybilla Sedlar">
+
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
