--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <!-- Performance hints -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <link rel="preload" href="./hero-image.jpeg" as="image">
+    <link rel="preload" href="./hero-image.jpeg?v=2025" as="image">
     <link rel="preload" href="./logo.png" as="image">
 
     <!-- Strukturierte Daten (JSON-LD Schema) -->
@@ -121,7 +121,7 @@
         }
         .hero-bg {
             /* HINTERGRUNDBILD: Erstellen Sie eine Datei 'hero-image.jpeg' (empfohlene Größe: 1920x1080px) und legen Sie sie in dasselbe Verzeichnis. */
-            background-image: url('./hero-image.jpeg');
+            background-image: url('./hero-image.jpeg?v=2025');
             background-size: cover;
             background-position: center;
         }
