--- a/datenschutz.html
+++ b/datenschutz.html
@@ -16,6 +16,7 @@
     <meta property="og:url" content="https://www.sybilla-sedlar.at/datenschutz.html">
     <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
     <meta property="og:image:alt" content="Logo von Sybilla Sedlar">
+    <meta property="og:locale" content="de_AT">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Datenschutz | Sybilla Sedlar">
     <meta name="twitter:description" content="Informationen zur Verarbeitung personenbezogener Daten durch Sybilla Sedlar.">
@@ -31,7 +32,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>SS</text></svg>">
+    <link rel="icon" href="./logo.png">
+    <link rel="apple-touch-icon" href="./logo.png">
 
     <style>
         body {
@@ -65,12 +67,12 @@
         }
     </style>
 </head>
-<body class="bg-white-50 text-white-800">
+<body class="bg-gray-50 text-gray-800">
 
 <!-- Header -->
 <header class="bg-white shadow-sm">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <a href="index.html" class="text-xl md:text-2xl font-bold text-white-900 tracking-tight">Sybilla Sedlar</a>
+        <a href="index.html" class="text-xl md:text-2xl font-bold text-gray-900 tracking-tight">Sybilla Sedlar</a>
         <a href="index.html#contact" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">
             Zurück zur Hauptseite
         </a>
@@ -86,11 +88,11 @@
 
         <h2>Verantwortliche Stelle</h2>
         <p>
-            <!-- PLATZHALTER: Ersetzen Sie alle Daten in [eckigen Klammern] durch Ihre eigenen. -->
-            <strong>[Ihr vollständiger Name oder Firmenname]</strong><br>
-            [Ihre Straße und Hausnummer]<br>
-            [Ihre PLZ und Ihr Ort]<br>
-            E-Mail: [Ihre E-Mail-Adresse]
+            <strong>Mag. (FH) Sybilla Sedlar</strong><br>
+            Interim-Finanzmanagement<br>
+            [Straße und Hausnummer]<br>
+            Wien, Österreich<br>
+            E-Mail: <a href="mailto:kontakt@sybilla-sedlar.at">kontakt@sybilla-sedlar.at</a>
         </p>
 
         <h2>Allgemeine Hinweise zur Datenverarbeitung</h2>
@@ -125,13 +127,34 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-white-800 text-white">
+<footer class="bg-gray-800 text-white">
     <div class="container mx-auto px-6 py-8">
         <div class="text-center">
-            <p>&copy; 2024 Sybilla Sedlar | Interim-Finanzmanagement</p>
+            <p>&copy; 2025 Sybilla Sedlar | Interim-Finanzmanagement</p>
+            <p class="text-sm text-gray-400 mt-2">Professionell. Flexibel. Lösungsorientiert.</p>
         </div>
-        <div class="flex justify-center space-x-6 mt-6 border-t border-white-700 pt-6">
-            <a href="impressum.html" class="text-sm text-white-400 hover:text-white transition-colors">Impressum</a>
+
+        <!-- Social Media Links -->
+        <div class="flex justify-center space-x-6 mt-6 border-t border-gray-700 pt-6">
+            <a href="https://www.linkedin.com/in/sybilla-sedlar"
+               class="text-sm text-gray-400 hover:text-white transition-colors"
+               target="_blank"
+               rel="noopener noreferrer"
+               aria-label="LinkedIn Profil von Sybilla Sedlar">
+                LinkedIn
+            </a>
+            <a href="https://www.xing.com/profile/Sybilla_Sedlar"
+               class="text-sm text-gray-400 hover:text-white transition-colors"
+               target="_blank"
+               rel="noopener noreferrer"
+               aria-label="Xing Profil von Sybilla Sedlar">
+                Xing
+            </a>
+        </div>
+
+        <!-- Legal Links -->
+        <div class="flex justify-center space-x-6 mt-4">
+            <a href="impressum.html" class="text-sm text-gray-400 hover:text-white transition-colors">Impressum</a>
             <a href="datenschutz.html" class="text-sm text-white font-semibold">Datenschutz</a>
         </div>
     </div>
