--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:url" content="https://www.sybilla-sedlar.at">
     <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
     <meta property="og:image:alt" content="Logo von Sybilla Sedlar">
+    <meta property="og:locale" content="de_AT">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Sybilla Sedlar | Interim-Finanzmanagement & Prozessoptimierung">
@@ -37,11 +38,18 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link rel="icon" href="./logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./logo.png">
+    <link rel="manifest" href="./manifest.json">
     <link rel="canonical" href="https://www.sybilla-sedlar.at">
     <meta name="author" content="Sybilla Sedlar">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="theme-color" content="#3b82f6">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Sybilla Sedlar">
     
     <!-- Performance hints -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -108,6 +116,226 @@
                 "provider": {
                     "@type": "Person",
                     "name": "Sybilla Sedlar"
+                }
+            }
+        ]
+    }
+    </script>
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Startseite",
+                "item": "https://www.sybilla-sedlar.at/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Über mich",
+                "item": "https://www.sybilla-sedlar.at/#about"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Leistungen",
+                "item": "https://www.sybilla-sedlar.at/#services"
+            },
+            {
+                "@type": "ListItem",
+                "position": 4,
+                "name": "Referenzen",
+                "item": "https://www.sybilla-sedlar.at/#testimonials"
+            },
+            {
+                "@type": "ListItem",
+                "position": 5,
+                "name": "Kontakt",
+                "item": "https://www.sybilla-sedlar.at/#contact"
+            }
+        ]
+    }
+    </script>
+
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "Was ist Interim-Management?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Interim-Management ist die zeitlich befristete Übernahme von Führungspositionen durch externe Experten. Als Interim-Finanzmanagerin überbrücke ich personelle Vakanzen, leite Transformationsprojekte und optimiere Finanzprozesse - professionell, flexibel und mit sofortiger Einsatzbereitschaft."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Wie schnell können Sie bei einem Projekt starten?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Ich biete sofortige Verfügbarkeit und kann bei Bedarf innerhalb von 48 Stunden starten. Meine langjährige Erfahrung ermöglicht es mir, mich schnell in neue Unternehmensstrukturen einzuarbeiten und ab dem ersten Tag Mehrwert zu schaffen."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Welche SAP-Systeme beherrschen Sie?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Ich verfüge über umfassende Expertise in SAP Concur (Reisekostenmanagement) und SAP HANA. Meine Erfahrung umfasst sowohl die Implementierung als auch die Optimierung dieser Systeme, inklusive Schulung von Teams und Change Management."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "In welchen Regionen sind Sie tätig?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Mein Haupteinsatzgebiet ist Österreich, insbesondere Wien und Umgebung. Ich arbeite aber auch in Deutschland, der Schweiz und bei Bedarf in ganz Europa. Remote-Arbeit ist je nach Projektanforderung ebenfalls möglich."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Welche Branchen kennen Sie?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Meine Expertise erstreckt sich über verschiedene Branchen, von internationalen Konzernen (wie Estée Lauder) über Produktionsunternehmen bis hin zu SaaS-Unternehmen und Handelsunternehmen. Diese Vielfalt ermöglicht es mir, Best Practices branchenübergreifend anzuwenden."
+                }
+            }
+        ]
+    }
+    </script>
+
+    <!-- LocalBusiness Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Sybilla Sedlar - Interim-Finanzmanagement",
+        "image": "https://www.sybilla-sedlar.at/logo.png",
+        "description": "Professionelles Interim-Management im Finanzbereich. Expertise in Prozessoptimierung, SAP, Teamführung und Überbrückung von Vakanzen.",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "[Straße und Hausnummer]",
+            "addressLocality": "Wien",
+            "addressRegion": "Wien",
+            "addressCountry": "AT"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 48.2082,
+            "longitude": 16.3738
+        },
+        "url": "https://www.sybilla-sedlar.at",
+        "email": "kontakt@sybilla-sedlar.at",
+        "priceRange": "$$",
+        "areaServed": [
+            {
+                "@type": "Country",
+                "name": "Österreich"
+            },
+            {
+                "@type": "Country",
+                "name": "Deutschland"
+            },
+            {
+                "@type": "Country",
+                "name": "Schweiz"
+            }
+        ],
+        "sameAs": [
+            "https://www.linkedin.com/in/sybilla-sedlar",
+            "https://www.xing.com/profile/Sybilla_Sedlar"
+        ],
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday"
+            ],
+            "opens": "09:00",
+            "closes": "17:00"
+        }
+    }
+    </script>
+
+    <!-- Review Schema for Testimonials -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "name": "Interim-Finanzmanagement",
+        "provider": {
+            "@type": "Person",
+            "name": "Sybilla Sedlar"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5",
+            "reviewCount": "3"
+        },
+        "review": [
+            {
+                "@type": "Review",
+                "author": {
+                    "@type": "Person",
+                    "name": "Dr. Andreas Weber"
+                },
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "reviewBody": "Als unsere langjährige Finanzleiterin unerwartet ausfiel, konnte Frau Sedlar innerhalb von 48 Stunden einspringen. Ihre strukturierte Herangehensweise und tiefe SAP-Kenntnisse haben uns durch eine kritische Quartalsabschlussphase geführt.",
+                "datePublished": "2024-06-15",
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Innovations GmbH"
+                }
+            },
+            {
+                "@type": "Review",
+                "author": {
+                    "@type": "Person",
+                    "name": "Mag. Julia Schneider"
+                },
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "reviewBody": "Die Implementierung von SAP Concur schien zunächst ein unlösbares Problem. Frau Sedlar hat nicht nur die technische Umsetzung gemeistert, sondern auch unser Team erfolgreich geschult. Heute sparen wir 40% Zeit bei der Reisekostenabrechnung.",
+                "datePublished": "2024-08-20",
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Produktions AG"
+                }
+            },
+            {
+                "@type": "Review",
+                "author": {
+                    "@type": "Person",
+                    "name": "Thomas Huber"
+                },
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "reviewBody": "In nur 3 Monaten hat Frau Sedlar unsere Abschlussprozesse von Grund auf optimiert. Die Effizienzsteigerung von 40% spricht für sich. Ihre Kombination aus fachlicher Expertise und empathischer Führung hat unser Team nachhaltig gestärkt.",
+                "datePublished": "2024-10-05",
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Digital Solutions GmbH"
                 }
             }
         ]
@@ -252,7 +480,14 @@
     <div class="responsive-container">
         <div class="header-container py-3">
             <a href="#home" class="logo-container flex items-center space-x-3">
-                <img src="./logo.png" alt="Logo Sybilla Sedlar - Interim-Finanzmanagement" class="h-8 w-auto sm:h-10" loading="eager">
+                <img src="./logo.png"
+                     srcset="./logo.png 1x, ./logo.png 2x"
+                     sizes="(max-width: 640px) 32px, 40px"
+                     alt="Logo Sybilla Sedlar - Interim-Finanzmanagement"
+                     class="h-8 w-auto sm:h-10"
+                     width="40"
+                     height="40"
+                     loading="eager">
                 <span class="logo-text font-bold text-gray-900 tracking-tight">Sybilla Sedlar</span>
             </a>
             <div class="nav-container">
@@ -305,7 +540,14 @@
             </div>
             <div class="grid md:grid-cols-5 gap-12 items-center">
                 <div class="md:col-span-2" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="./logo.png" alt="Portrait von Sybilla Sedlar - Interim-Finanzmanagerin und SAP-Expertin" class="rounded-full shadow-xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover" loading="lazy">
+                    <img src="./logo.png"
+                         srcset="./logo.png 1x, ./logo.png 2x"
+                         sizes="(max-width: 768px) 256px, 320px"
+                         alt="Portrait von Sybilla Sedlar - Interim-Finanzmanagerin und SAP-Expertin"
+                         class="rounded-full shadow-xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover"
+                         width="320"
+                         height="320"
+                         loading="lazy">
                 </div>
                 <div class="md:col-span-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">Mag. (FH) Sybilla Sedlar</h3>
@@ -457,7 +699,33 @@
             <p>&copy; 2025 Sybilla Sedlar | Interim-Finanzmanagement</p>
             <p class="text-sm text-gray-400 mt-2">Professionell. Flexibel. Lösungsorientiert.</p>
         </div>
+
+        <!-- Social Media Links -->
         <div class="flex justify-center space-x-6 mt-6 border-t border-gray-700 pt-6">
+            <a href="https://www.linkedin.com/in/sybilla-sedlar"
+               class="text-sm text-gray-400 hover:text-white transition-colors"
+               target="_blank"
+               rel="noopener noreferrer"
+               aria-label="LinkedIn Profil von Sybilla Sedlar">
+                <svg class="w-6 h-6 inline-block mr-1" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                </svg>
+                LinkedIn
+            </a>
+            <a href="https://www.xing.com/profile/Sybilla_Sedlar"
+               class="text-sm text-gray-400 hover:text-white transition-colors"
+               target="_blank"
+               rel="noopener noreferrer"
+               aria-label="Xing Profil von Sybilla Sedlar">
+                <svg class="w-6 h-6 inline-block mr-1" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M18.188 0c-.517 0-.741.325-.927.66 0 0-7.455 13.224-7.702 13.657.015.024 4.919 9.023 4.919 9.023.17.308.436.66.967.66h3.454c.211 0 .375-.078.463-.22.089-.151.089-.346-.009-.536l-4.879-8.916c-.004-.006-.004-.016 0-.022L22.139.756c.095-.191.097-.387.006-.535C22.056.078 21.894 0 21.686 0h-3.498zM3.648 4.74c-.211 0-.385.074-.473.216-.09.149-.078.339.02.531l2.34 4.05c.004.01.004.016 0 .021L1.86 16.051c-.099.188-.093.381 0 .529.085.142.239.234.45.234h3.461c.518 0 .766-.348.945-.667l3.734-6.609-2.378-4.155c-.172-.315-.434-.659-.962-.659H3.648v.016z"/>
+                </svg>
+                Xing
+            </a>
+        </div>
+
+        <!-- Legal Links -->
+        <div class="flex justify-center space-x-6 mt-4">
             <a href="impressum.html" class="text-sm text-gray-400 hover:text-white transition-colors">Impressum</a>
             <a href="datenschutz.html" class="text-sm text-gray-400 hover:text-white transition-colors">Datenschutz</a>
         </div>
