--- a/public/impressum.html
+++ b/public/impressum.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum | Sybilla Sedlar</title>
 
+    <meta name="description" content="Impressum von Sybilla Sedlar: gesetzliche Anbieterkennzeichnung und Kontaktinformationen.">
+    <meta name="keywords" content="Sybilla Sedlar, Impressum, Kontakt">
+    <link rel="canonical" href="https://www.sybilla-sedlar.at/impressum.html">
+    <meta name="author" content="Sybilla Sedlar">
+    <meta name="robots" content="index, follow, max-image-preview:large">
+    <meta property="og:title" content="Impressum | Sybilla Sedlar">
+    <meta property="og:description" content="Gesetzliche Anbieterkennzeichnung und Kontaktinformationen von Sybilla Sedlar.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sybilla-sedlar.at/impressum.html">
+    <meta property="og:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta property="og:image:alt" content="Logo von Sybilla Sedlar">
+    <meta property="og:locale" content="de_AT">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Impressum | Sybilla Sedlar">
+    <meta name="twitter:description" content="Gesetzliche Anbieterkennzeichnung und Kontaktinformationen von Sybilla Sedlar.">
+    <meta name="twitter:image" content="https://www.sybilla-sedlar.at/logo.png">
+    <meta name="twitter:image:alt" content="Logo von Sybilla Sedlar">
+
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -14,7 +32,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>SS</text></svg>">
+    <link rel="icon" href="./logo.png">
+    <link rel="apple-touch-icon" href="./logo.png">
 
     <style>
         body {
@@ -22,12 +41,12 @@
         }
     </style>
 </head>
-<body class="bg-white-50 text-white-800">
+<body class="bg-gray-50 text-gray-800">
 
 <!-- Header -->
 <header class="bg-white shadow-sm">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <a href="index.html" class="text-xl md:text-2xl font-bold text-white-900 tracking-tight">Sybilla Sedlar</a>
+        <a href="index.html" class="text-xl md:text-2xl font-bold text-gray-900 tracking-tight">Sybilla Sedlar</a>
         <a href="index.html#contact" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">
             Zurück zur Hauptseite
         </a>
@@ -37,50 +56,66 @@
 <!-- Main Content -->
 <main class="container mx-auto px-6 py-16 md:py-24">
     <div class="max-w-3xl mx-auto bg-white p-8 md:p-12 rounded-lg shadow-lg">
-        <h1 class="text-3xl md:text-4xl font-bold text-white-900 mb-8">Impressum</h1>
+        <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-8">Impressum</h1>
 
-        <h2 class="text-2xl font-semibold text-white-800 mt-8 mb-4">Angaben gemäß § 5 TMG und § 25 MedienG</h2>
+        <h2 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">Angaben gemäß § 5 TMG und § 25 MedienG</h2>
 
-        <!-- PLATZHALTER: Ersetzen Sie alle Daten in [eckigen Klammern] durch Ihre eigenen. -->
-        <p class="mb-2"><strong>[Ihr vollständiger Name oder Firmenname]</strong></p>
-        <p class="mb-2">Mag. (FH) Sybilla Sedlar</p>
-        <p class="mb-2">[Ihre Straße und Hausnummer]</p>
-        <p class="mb-4">[Ihre PLZ und Ihr Ort]</p>
+        <p class="mb-2"><strong>Mag. (FH) Sybilla Sedlar</strong></p>
+        <p class="mb-2">Interim-Finanzmanagement</p>
+        <p class="mb-2">[Straße und Hausnummer]</p>
+        <p class="mb-4">Wien, Österreich</p>
 
-        <h2 class="text-2xl font-semibold text-white-800 mt-8 mb-4">Kontakt</h2>
-        <p class="mb-2">Telefon: [Ihre Telefonnummer]</p>
-        <p class="mb-2">E-Mail: [Ihre E-Mail-Adresse]</p>
+        <h2 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">Kontakt</h2>
+        <p class="mb-2">E-Mail: <a href="mailto:kontakt@sybilla-sedlar.at" class="text-blue-600 hover:underline">kontakt@sybilla-sedlar.at</a></p>
+        <p class="mb-2">Website: <a href="https://www.sybilla-sedlar.at" class="text-blue-600 hover:underline">www.sybilla-sedlar.at</a></p>
 
-        <h2 class="text-2xl font-semibold text-white-800 mt-8 mb-4">Umsatzsteuer-ID</h2>
+        <h2 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">Umsatzsteuer-ID</h2>
         <p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
-            [Ihre Umsatzsteuer-ID, falls vorhanden]</p>
+            [ATUxxxxxxxxx]</p>
 
-        <h2 class="text-2xl font-semibold text-white-800 mt-8 mb-4">Aufsichtsbehörde</h2>
-        <p> [Ihre zuständige Aufsichtsbehörde, z.B. Magistratisches Bezirksamt für den ... Bezirk, falls zutreffend]</p>
+        <h2 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">Unternehmensgegenstand</h2>
+        <p>Interim-Management, Finanzberatung und Prozessoptimierung</p>
 
-        <h2 class="text-2xl font-semibold text-white-800 mt-8 mb-4">Unternehmensgegenstand</h2>
-        <p>[z.B. Unternehmensberatung einschließlich der Unternehmensorganisation]</p>
-
-        <h2 class="text-2xl font-semibold text-white-800 mt-8 mb-4">Haftungsausschluss (Disclaimer)</h2>
-        <h3 class="text-xl font-semibold text-white-800 mt-6 mb-2">Haftung für Inhalte</h3>
-        <p class="text-white-700 mb-4">Als Diensteanbieter sind wir für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Wir sind jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.</p>
-        <h3 class="text-xl font-semibold text-white-800 mt-6 mb-2">Haftung für Links</h3>
-        <p class="text-white-700 mb-4">Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
-        <h3 class="text-xl font-semibold text-white-800 mt-6 mb-2">Urheberrecht</h3>
-        <p class="text-white-700 mb-4">Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen und österreichischen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.</p>
+        <h2 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">Haftungsausschluss (Disclaimer)</h2>
+        <h3 class="text-xl font-semibold text-gray-800 mt-6 mb-2">Haftung für Inhalte</h3>
+        <p class="text-gray-700 mb-4">Als Diensteanbieter sind wir für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Wir sind jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.</p>
+        <h3 class="text-xl font-semibold text-gray-800 mt-6 mb-2">Haftung für Links</h3>
+        <p class="text-gray-700 mb-4">Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
+        <h3 class="text-xl font-semibold text-gray-800 mt-6 mb-2">Urheberrecht</h3>
+        <p class="text-gray-700 mb-4">Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen und österreichischen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.</p>
     </div>
 </main>
 
 <!-- Footer -->
-<footer class="bg-white-800 text-white">
+<footer class="bg-gray-800 text-white">
     <div class="container mx-auto px-6 py-8">
         <div class="text-center">
-            <p>&copy; 2024 Sybilla Sedlar | Interim-Finanzmanagement</p>
-            <p class="text-sm text-white-400 mt-2">Professionell. Flexibel. Lösungsorientiert.</p>
+            <p>&copy; 2025 Sybilla Sedlar | Interim-Finanzmanagement</p>
+            <p class="text-sm text-gray-400 mt-2">Professionell. Flexibel. Lösungsorientiert.</p>
         </div>
-        <div class="flex justify-center space-x-6 mt-6 border-t border-white-700 pt-6">
+
+        <!-- Social Media Links -->
+        <div class="flex justify-center space-x-6 mt-6 border-t border-gray-700 pt-6">
+            <a href="https://www.linkedin.com/in/sybilla-sedlar"
+               class="text-sm text-gray-400 hover:text-white transition-colors"
+               target="_blank"
+               rel="noopener noreferrer"
+               aria-label="LinkedIn Profil von Sybilla Sedlar">
+                LinkedIn
+            </a>
+            <a href="https://www.xing.com/profile/Sybilla_Sedlar"
+               class="text-sm text-gray-400 hover:text-white transition-colors"
+               target="_blank"
+               rel="noopener noreferrer"
+               aria-label="Xing Profil von Sybilla Sedlar">
+                Xing
+            </a>
+        </div>
+
+        <!-- Legal Links -->
+        <div class="flex justify-center space-x-6 mt-4">
             <a href="impressum.html" class="text-sm text-white font-semibold">Impressum</a>
-            <a href="datenschutz.html" class="text-sm text-white-400 hover:text-white transition-colors">Datenschutz</a>
+            <a href="datenschutz.html" class="text-sm text-gray-400 hover:text-white transition-colors">Datenschutz</a>
         </div>
     </div>
 </footer>
